--- a/index.html
+++ b/index.html
@@ -25,10 +25,16 @@
         <div class="title" data-before="HUMMINGBIRD">Saimugil</div>
       </div>
       <img
-        src="Assets/flower.png"
+        src="Assets/blossom-plant-flower-petal-bloom-red-914162-pxhere.com-removebg-preview.png"
         class="decorate"
         alt=""
-        style="width: 50vw; bottom: 0; right: 0"
+        style="
+          width: 50vw;
+          bottom: 0;
+          right: 0;
+          padding-left: 50px;
+          padding-bottom: -30px;
+        "
       />
     </div>
     <div id="container3D"></div>
